test/Fail/Issue480.err
error: [UnsolvedConstraints]
Unsolved constraints

Issue480.agda:14.17-29: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  Issue480.agda:14.17-18
  Issue480.agda:14.18-29
